try to fix scrollbar on desktop 2

--- a/app/assets/stylesheets/ass1_styles.css
+++ b/app/assets/stylesheets/ass1_styles.css
@@ -61,10 +61,10 @@ textarea {
     width: 173px !important;
     height: 50px !important;
     text-align: center !important;
-    line-height: 45px !important;
-    resize: none;
-    white-space: nowrap;
-    overflow: hidden;
+    line-height: 50px !important;
+    resize: none !important;
+    white-space: nowrap !important!;
+    overflow: hidden !important;
 }
 
 textarea:focus {
